--- a/src/renderer/App.global.css
+++ b/src/renderer/App.global.css
@@ -2,6 +2,9 @@
  * @NOTE: Prepend a `~` to css file paths that are in your node_modules
  *        See https://github.com/webpack-contrib/sass-loader#imports
  */
+
+@import '~react-toastify/dist/ReactToastify.css';
+
 body {
   position: relative;
   color: white;
